changes in title

--- a/home.html
+++ b/home.html
@@ -2,30 +2,29 @@
 <br lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
-    <script>
-        console.log("Hello, world!");
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Main Page ka title changed </title>
+  <script>
+    console.log("Hello, world!");
+  </script>
 </head>
 <style>
   li:hover {
-  color: rgb(22, 197, 89);
+    color: rgb(22, 197, 89);
   }
-
 </style>
 
 <body>
   <section style="background-color: rgb(22, 197, 89); width: 100%;
   height: 100vh;">
     <h1 style="text-align: center; background-color: rgb(124, 197, 197);">Main Page:</h1></br>
-    <p  style=" background-color: rgb(124, 197, 197);" >Welcome to my Website. Click any one of below to visit: </p>
+    <p style=" background-color: rgb(124, 197, 197);">Welcome to my Website. Click any one of below to visit: </p>
     <ol style="background-color: rgb(124, 197, 197);">
-        <li><a href="paragraph.html">Paragraph Format</a></li>
-        <li><a href="List.html">Lists and Tables</a></li>
-        <li><a href="gallery.html">Media</a></li>
-        <li><a href="Contact.html">Contact</a></li>
+      <li><a href="paragraph.html">Paragraph Format</a></li>
+      <li><a href="List.html">Lists and Tables</a></li>
+      <li><a href="gallery.html">Media</a></li>
+      <li><a href="Contact.html">Contact</a></li>
     </ol>
   </section>
 </body>
