--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Main Page ka title changed </title>
+  <title>Version 2 </title>
   <script>
     console.log("Hello, world!");
   </script>
